Clean up stylesheets
Merge module/components folder
Move home/_home.scss to pages/
Remove unused facia/_mixins.scss

--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -1,15 +1,14 @@
 @charset 'UTF-8';
 
 @import 'head.common';
-/* ==========================================================================
-   Modules
-   ========================================================================== */
-@import 'module/_social';
+
 /* ==========================================================================
    Membership components
    ========================================================================== */
 @import 'components/action';
 @import 'components/benefits';
+@import 'components/social';
+
 /* ==========================================================================
    Membership pages
    ========================================================================== */
@@ -23,15 +22,12 @@
 @import 'pages/about';
 @import 'pages/help';
 @import 'pages/feedback';
+@import 'pages/home'; // Home A-B test styles
+
 /* ==========================================================================
    Webfonts pages
    ========================================================================== */
 @import 'webfonts';
-
-/* ==========================================================================
-   Home A-B test styles
-   ========================================================================== */
-@import 'home/home';
 
 // finally import print-only styles
 // (currently only used for event thankyou pages)
