Refactor icon classes to reduce specificity

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -142,13 +142,13 @@
                     <div class="event-content__name" itemprop="name">@event.name.text</div>
                     <div class="event-content__time event-content--line-divider u-cf">
                         <div class="event-content__first">
-                            <i class="icon-large-early_booking icon--small"></i>
+                            <i class="icon-large-early_booking icon--info"></i>
                         </div>
                         <div class="event-content__second" itemprop="startDate" content="@event.start">@prettyDateWithTimeAndDayName(event.start)</div>
                     </div>
                     <div class="event-content__location event-content--line-divider u-cf" itemprop="location" itemscope itemtype="http://schema.org/Place">
                         <div class="event-content__first">
-                            <i class="icon-location icon--small"></i>
+                            <i class="icon-location icon--info"></i>
                         </div>
                         <div class="event-content__second">
                             <span class="event-content__venue-name" itemprop="name">@event.venue.name</span>
