--- a/frontend/app/views/fragments/tier/chooseDetails.scala.html
+++ b/frontend/app/views/fragments/tier/chooseDetails.scala.html
@@ -8,7 +8,7 @@
         <ul class="u-unstyled">
         @for(benefit <- benefits.list) {
             <li class="benefits-title">
-                <i class="icon-@benefit.identifier icon--small"></i> @benefit.title
+                <i class="icon-@benefit.identifier icon--benefits"></i> @benefit.title
             </li>
             <li class="benefits-copy">@benefit.description</li>
         }
