--- a/frontend/app/views/fragments/tier/details.scala.html
+++ b/frontend/app/views/fragments/tier/details.scala.html
@@ -12,7 +12,7 @@
         <div class="benefits-item u-cf @if(isLead){ benefits-item--highlighted}">
             <li class="benefits-title">
                 <div class="benefits-title__first">
-                    <i class="icon-@benefit.identifier icon--small"></i>
+                    <i class="icon-@benefit.identifier icon--benefits"></i>
                 </div>
                 <div class="benefits-title__second">@benefit.title</div>
             </li>
