--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -37,14 +37,14 @@
 
                     <div class="event-item__time event-content--line-divider u-cf">
                         <div class="event-content__first">
-                            <i class="icon-large-early_booking icon--small"></i>
+                            <i class="icon-large-early_booking icon--benefits"></i>
                         </div>
                         <div class="event-content__second" itemprop="startDate" content="@event.start">@prettyDateWithTimeAndDayName(event.start)</div>
                     </div>
 
                     <div class="event-item__location event-content--line-divider u-cf">
                         <div class="event-content__first">
-                            <i class="icon-location icon--small"></i>
+                            <i class="icon-location icon--benefits"></i>
                         </div>
                         <div class="event-content__second">
                             @if(event.venue.name){
