changed button color as per designs request

--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -115,7 +115,7 @@
   }
 
   .theme--masterclass & {
-    color: black;
+    color: $c-neutral1;
     background-color: $mem-mc-top;
     &:hover {
       background-color: darken($mem-mc-top, 5%);
