adding js-container class for javascript listeners

--- a/frontend/app/views/joiner/tierList.scala.html
+++ b/frontend/app/views/joiner/tierList.scala.html
@@ -12,7 +12,7 @@
     	</header>
     	<div class="section-intro">Join as a founding Partner or Patron and the price you pay today will never rise</div>
 
-        <div class="package-list package-list--flex-box">
+        <div class="package-list package-list--flex-box js-benefit-container">
             @fragments.tier.benefits(currentTier=None, tier=Tier.Friend, showBenefitDetails=true, mode="promo")
             @fragments.tier.benefits(currentTier=None, tier=Tier.Partner, showBenefitDetails=true, mode="promo")
             @fragments.tier.benefits(currentTier=None, tier=Tier.Patron, showBenefitDetails=true, mode="promo")
