--- a/frontend/app/views/fragments/tier/details.scala.html
+++ b/frontend/app/views/fragments/tier/details.scala.html
@@ -1,7 +1,8 @@
 @(
     currentTier: com.gu.membership.salesforce.Tier.Tier,
     showBenefitDetails: Boolean = true,
-    showBenefitCopy: Boolean = true
+    showBenefitCopy: Boolean = true,
+    isSmallBenefit: Boolean = false
 )
 @import model.Benefits
 @import model.Benefits.BenefitItem
