--- a/frontend/app/views/fragments/tier/details.scala.html
+++ b/frontend/app/views/fragments/tier/details.scala.html
@@ -10,16 +10,18 @@
 
 @benefitListing(benefits: Seq[BenefitItem], isLead: Boolean) = {
     @for(benefit <- benefits) {
-        <div class="benefits-item u-cf @if(isLead){ benefits-item--highlighted}">
-            <li class="benefits-title">
-                <div class="benefits-title__first">
-                    <i class="icon-@benefit.identifier icon--small"></i>
-                </div>
-                <div class="benefits-title__second">@benefit.title</div>
-            </li>
-            @if(showBenefitCopy) {
-                <li class="benefits-copy">@benefit.description</li>
-            }
+        <div class="benefits-item u-cf">
+            <div class="benefits-item__inner@if(isLead){ benefits-item__inner--highlighted} @if(isSmallBenefit == true){ benefits-item__inner--small}">
+                <li class="benefits-title">
+                    <div class="benefits-title__first">
+                        <i class="icon-@benefit.identifier icon--small"></i>
+                    </div>
+                    <div class="benefits-title__second">@benefit.title</div>
+                </li>
+                @if(showBenefitCopy) {
+                    <li class="benefits-copy">@benefit.description</li>
+                }
+            </div>
         </div>
     }
 }
