Only hide ticket sale dates on sticky side bar

--- a/frontend/assets/stylesheets/pages/_events-detail.scss
+++ b/frontend/assets/stylesheets/pages/_events-detail.scss
@@ -254,9 +254,7 @@
         right: 0;
         left: 0;
 
-        .event-content__tickets,
-        .event-content__time,
-        .event-content__location {
+        .event-content__tickets {
             display: none;
         }
     }
