changed name of sprite class after sprite refactor work

--- a/frontend/app/views/testing/testUsers.scala.html
+++ b/frontend/app/views/testing/testUsers.scala.html
@@ -9,7 +9,7 @@
     <div class="info-container">
 
         <h2 class="section-body-headline">New Test User key: <strong>@userString</strong>
-            <button class="clipboard-button icon-sprite-copy-to-clipboard js-copy-to-clipboard-button" data-clipboard-text="@userString"></button>
+            <button class="clipboard-button icon-copy-to-clipboard js-copy-to-clipboard-button" data-clipboard-text="@userString"></button>
         </h2>
 
         <section class="user-detail-intro">
