--- a/frontend/app/views/fragments/tier/details.scala.html
+++ b/frontend/app/views/fragments/tier/details.scala.html
@@ -11,7 +11,7 @@
 @benefitListing(benefits: Seq[BenefitItem], isLead: Boolean) = {
     @for(benefit <- benefits) {
         <div class="benefits-item u-cf">
-            <div class="benefits-item__inner@if(isLead){ benefits-item__inner--highlighted} @if(isSmallBenefit == true){ benefits-item__inner--small}">
+            <div class="benefits-item__inner@if(isLead){ benefits-item__inner--highlighted} @if(isSmallBenefit){ benefits-item__inner--small}">
                 <li class="benefits-title">
                     <div class="benefits-title__first">
                         <i class="icon-@benefit.identifier icon--small"></i>
