--- a/frontend/assets/stylesheets/pages/_events-detail.scss
+++ b/frontend/assets/stylesheets/pages/_events-detail.scss
@@ -190,60 +190,95 @@
     @include mq(desktop) {
         background-color: transparent;
     }
+}
 
-    .event-content__image {
+.event-content__image {
+    margin: 0 auto;
+
+    @include mq(mem-full) {
+        width: rem(gs-span(14) + $gs-gutter * 2);
+    }
+
+    img {
+        width: 100%;
+    }
+
+    .theme--masterclass & {
+        display: none;
+    }
+}
+
+.event-content__container {
+    background-color: $white;
+    padding: rem($gs-gutter) rem($gs-gutter / 2);
+
+    @include mq(tablet) {
+        padding: rem($gs-gutter * 3) 0;
+    }
+}
+
+.event-content__container,
+.event-content__sticky.is-sticky {
+    @include mq(tablet) {
+        width: rem(gs-span(9) + $gs-gutter * 2);
         margin: 0 auto;
+    }
 
-        @include mq(mem-full) {
-            width: rem(gs-span(14) + $gs-gutter * 2);
-        }
+    @include mq(desktop) {
+        width: rem(gs-span(12) + $gs-gutter * 2);
+    }
 
-        img {
-            width: 100%;
-        }
+    @include mq(mem-full) {
+        width: rem(gs-span(14) + $gs-gutter * 2);
+    }
+}
 
-        .theme--masterclass & {
+@mixin event-content__body-width($property) {
+    @include mq(tablet) {
+        #{$property}: rem(gs-span(5) + $gs-gutter * 3);
+    }
+
+    @include mq(desktop) {
+        #{$property}: rem(gs-span(8) + $gs-gutter * 2);
+    }
+
+    @include mq(mem-full) {
+        #{$property}: rem(gs-span(10) + $gs-gutter * 2);
+    }
+}
+
+.event-content__sticky.is-sticky {
+    @include mq(tablet) {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+
+        .event-content__tickets {
             display: none;
         }
     }
 
-    .event-content__container {
-        padding: rem($gs-gutter) rem($gs-gutter / 2);
-        background-color: $white;
-
-        @include mq(tablet) {
-            width: rem(gs-span(9) + $gs-gutter * 2);
-            padding: rem($gs-gutter * 3) 0;
-            margin: 0 auto;
-        }
-
-        @include mq(desktop) {
-            width: rem(gs-span(12) + $gs-gutter * 2);
-        }
-
-        @include mq(mem-full) {
-            width: rem(gs-span(14) + $gs-gutter * 2);
-        }
-
-        .event-content__body {
-            position: relative;
-
-            @include mq(tablet) {
-                float: left;
-                padding: 0 rem($gs-gutter) 0 0;
-                width: rem(gs-span(5) + $gs-gutter * 3);
-            }
-
-            @include mq(desktop) {
-                width: rem(gs-span(8) + $gs-gutter * 2);
-                padding: 0 rem($gs-gutter);
-            }
-
-            @include mq(mem-full) {
-                width: rem(gs-span(10) + $gs-gutter * 2);
-            }
-        }
+    @include mq(desktop) {
+        padding-right: rem($gs-gutter);
     }
+
+    @include event-content__body-width('padding-left');
+}
+
+.event-content__body {
+    position: relative;
+
+    @include mq(tablet) {
+        float: left;
+        padding: 0 rem($gs-gutter) 0 0;
+    }
+
+    @include mq(desktop) {
+        padding: 0 rem($gs-gutter);
+    }
+
+    @include event-content__body-width('width');
 }
 
 .event__price-note,
