--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -34,7 +34,7 @@
                        placeholder="Filter by title"
                        autocomplete="off" />
                 <i class="events-list__filter__icon icon-search"></i>
-                <button class="events-list__filter__cross icon-cross js-filter-clear"></button>
+                <button class="events-list__filter__cross icon-cross is-hidden js-filter-clear"></button>
             </label>
         </div>
     </div>
