Short homepage - Update caption for 4th slide

--- a/frontend/app/views/home.scala.html
+++ b/frontend/app/views/home.scala.html
@@ -31,7 +31,7 @@
         <div class="slide-show">
             @slideShowElement(6, "viv_west_", "Guardian Live event: Vivienne Westwood", "six")
             @slideShowElement(5, "tin_temp_", "Observer Ideas - Stories that inspire: Tinie Tempah", "five")
-            @slideShowElement(4, "women_", "Guardian Live event: David Mitchell", "four")
+            @slideShowElement(4, "women_", "Guardian Live event: Russell Brand", "four")
             @slideShowElement(3, "jim_page_", "A life in music: Jimmy Page", "three")
             @slideShowElement(2, "pussy_riot_", "Guardian Live event: Pussy Riot - art, sex and disobedience", "two")
             @slideShowElement(1, "man_aud_", "Guardian Live with Russell Brand", "one", true)
