--- a/frontend/app/views/joiner/thankyou/paid.scala.html
+++ b/frontend/app/views/joiner/thankyou/paid.scala.html
@@ -25,7 +25,7 @@
                     Tier
                 </th>
                 <td>
-                    @subscriptionDetails.planName
+                    @tier
                 </td>
             </tr>
             <tr role="row">
