--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -21,7 +21,7 @@
     @if(event.isSoldOut) {
         <span class="action @actionClassSoldOut">Sold out</span>
     } else {
-        <a class="action @actionClassBuy js-ticket-cta" href="/event/@event.id/buy" itemprop="url">Buy tickets</a>
+        <a class="action @actionClassBuy js-ticket-cta" href="/event/@event.id/buy" itemprop="url">Book tickets</a>
         <div class="terms-info js-legal-terms">By proceeding, you agree to the<br /> @termsAndConditions._1
             <a href="@termsAndConditions._2" target="_blank">Terms and Conditions</a>
         </div>
