like the seasons, we must change

--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -31,7 +31,7 @@
             </div>
             <div class="home-slice__copy-block">
                 <p class="home-slice__copy">Stay up-to-date with the latest news and developments from the membership community and watch highlights of Guardian Live events by visiting <a href="@(Config.guardianMembershipUrl)">theguardian.com/membership</a>.</p>
-                <p class="home-slice__copy">Book your tickets and discover the Autumn lineup for Guardian Live on our <a href="/events">listings page</a>.</p>
+                <p class="home-slice__copy">Book your tickets and discover the Winter lineup for Guardian Live on our <a href="/events">listings page</a>.</p>
                 <a class="action home-slice__action" href="@(Config.guardianMembershipUrl)">Membership on the Guardian</a>
                 <a class="action home-slice__action action--secondary-button" href="/events">See all events</a>
             </div>
