Use <button> for benefits toggle, not empty <a>

--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -35,7 +35,7 @@
             }
             <div class="package__title-container package__title-container--@tier.toString.toLowerCase u-cf">
                 <div class="package__select-zone mobile-portrait-only js-benefit-header">
-                    <a class="package__select-toggle js-benefit-button" href="#"></a>
+                    <button class="package__select-toggle js-benefit-button"></button>
                 </div>
                 <h2 class="package__title">@tier</h2>
                 @fragments.benefits.priceInfo(tier)
