--- a/frontend/assets/stylesheets/_extends-only.scss
+++ b/frontend/assets/stylesheets/_extends-only.scss
@@ -30,5 +30,6 @@
     right: rem($gs-gutter / 2);
     background-color: $border-bottom-color;
     padding: rem(14px);
+    border: 0 none;
     display: block;
 }
