Move location of .js-event-saving to only affect label

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -183,7 +183,7 @@
                                         <div class="event-content__trail">
                                             <span class="event-content__trail-tag js-event-price-tag">Partners/Patrons </span>
                                             <span class="event-content__trail-upsell js-event-price-discount" itemprop="lowPrice">@pricing.discountPrice</span>
-                                            <span class="event-content__trail-saving js-event-price-saving"> (save @pricing.savingPrice)</span>
+                                            <span class="event-content__trail-saving"> (<span class="js-event-price-saving">save</span> @pricing.savingPrice)</span>
                                         </div>
                                     }
                                 }
