--- a/frontend/app/views/fragments/event/item.scala.html
+++ b/frontend/app/views/fragments/event/item.scala.html
@@ -54,9 +54,9 @@
                         <div class="event-item__price">
                             @for(ticket <- event.generalReleaseTicket) {
                                 @for(pricing <- ticket.cost) {
-                                    <span class="event-item__price-amount" itemprop="highPrice">@pricing.formattedPrice</span>
-                                    <span class="event-item__price-amount-discount" itemprop="lowPrice" content="@pricing.discountPrice">Partners/Patrons: @pricing.discountPrice</span>
-                                    <span class="event-item__price-amount-discount">Save @pricing.savingPrice</span>
+                                    <span class="event-item__price-amount js-event-price" itemprop="highPrice">@pricing.formattedPrice</span>
+                                    <span class="event-item__price-amount-discount" itemprop="lowPrice" content="@pricing.discountPrice"><span class="js-event-price-tag">Partners/Patrons:</span> <span class="js-event-price-discount">@pricing.discountPrice</span></span>
+                                    <span class="event-item__price-amount-discount"><span class="js-event-price-saving">Save</span> @pricing.savingPrice</span>
                                 }
                             }
                         </div>
