--- a/frontend/app/views/joiner/thankyou.scala.html
+++ b/frontend/app/views/joiner/thankyou.scala.html
@@ -1,5 +1,5 @@
 @(member: com.gu.membership.salesforce.Member, subscription: model.Zuora.SubscriptionDetails,
-    cardOpt: Option[model.Stripe.Card], eventDetailsOpt: Option[(model.Eventbrite.RichEvent, String)])
+    cardOpt: Option[model.Stripe.Card], eventDetailsOpt: Option[(model.Eventbrite.RichEvent, String)], upgrade: Boolean)
 
 @import views.support.Dates._
 @import views.support.Prices._
@@ -9,6 +9,14 @@
     val ticketHeight = 60
     val iframeChrome = 560
     event.ticket_classes.length * ticketHeight + iframeChrome
+}
+
+@title = @{
+    if (upgrade) {
+        "Change Tier Summary | " + subscription.planName + " from Friend"
+    } else {
+        "Thank you | " + subscription.planName
+    }
 }
 
 @main("Thankyou | " + subscription.planName, containerPadding = false) {
