Send the google email and Identity email to join staff page. TODO: Change these to case class and add helper methods

--- a/frontend/app/views/joiner/staff.scala.html
+++ b/frontend/app/views/joiner/staff.scala.html
@@ -1,7 +1,9 @@
-@(error: Option[String])
+@(identityEmail: Option[String], googleAuthEmail: String, error: Option[String])
 
 @main("Staff Membership") {
 
 Staff Membership - coming soon
 <p> @error
+<p> Identity email: @identityEmail
+<p> Google auth email: @googleAuthEmail
 }
