--- a/frontend/app/views/fragments/tier/details.scala.html
+++ b/frontend/app/views/fragments/tier/details.scala.html
@@ -29,8 +29,8 @@
 <p class="package__description">@Benefits.details(currentTier).desc</p>
 @if(showBenefitDetails) {
     <div class="package__header">What's included</div>
-    <div class="package__list-benefits">
-        <ul class="package__list-benefits-element u-unstyled">
+    <div class="package-benefits">
+        <ul class="package-benefits__list u-unstyled">
             @benefitListing(Benefits.details(currentTier).leadBenefits, isLead=true)
             @benefitListing(Benefits.details(currentTier).otherBenefits, isLead=false)
         </ul>
