--- a/frontend/app/views/fragments/tier/details.scala.html
+++ b/frontend/app/views/fragments/tier/details.scala.html
@@ -10,7 +10,7 @@
 
 @benefitListing(benefits: Seq[BenefitItem], isLead: Boolean) = {
     @for(benefit <- benefits) {
-        <div class="benefits-item u-cf">
+        <div class="benefits-item">
             <div class="benefits-item__inner@if(isLead){ benefits-item__inner--highlighted} @if(isSmallBenefit){ benefits-item__inner--small}">
                 <li class="benefits-title">
                     <div class="benefits-title__first">
