tidy up of the help page styling and removal of html help class, change of styling as per designs request

--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -1,6 +1,6 @@
 @import configuration.Config
 
-@main("Help", htmlClass = "help") {
+@main("Help") {
 
     @fragments.layout.sectionHeader("Help")
 
