--- a/frontend/app/views/joiner/staff.scala.html
+++ b/frontend/app/views/joiner/staff.scala.html
@@ -1,7 +1,111 @@
-@(error: Option[String])
+@(error: Option[String])(implicit token: play.filters.csrf.CSRF.Token)
 
-@main("Staff Membership") {
+@import model.Benefits
+@import com.gu.membership.salesforce.Tier
 
-Staff Membership - coming soon
-<p> @error
+@signpost(textOptionOne: Html, buttonOptionOne: String, textOptionTwo: Html, buttonOptionTwo: String) = {
+    <ul class="signpost u-unstyled">
+        <li class="signpost-item signpost-item--sign">
+            <p>@textOptionOne</p>
+            <a class="action action--no-bottom-margin" href="">@buttonOptionOne</a>
+        </li>
+        <li class="signpost-item signpost-item--divider">or</li>
+        <li class="signpost-item signpost-item--sign">
+            <p>@textOptionTwo</p>
+            <div class="signpost__cta">
+                <a class="action action--no-bottom-margin" href="">@buttonOptionTwo</a>
+            </div>
+        </li>
+    </ul>
+}
+
+@userWelcome(userName: String, imgSrc: String) = {
+    <div class="u-cf">
+        <img class="user-img" src="https://static-secure.guim.co.uk/sys-images/discussion/avatars/2014/09/15/13762437/dd487341-0798-4dc3-9d5e-bf85964482bc/60x60.png" alt=""/>
+        <p>Hello <strong>exampleUserName</strong>. Glad to see you've decided to join Guardian Staff Membership.</p>
+    </div>
+}
+
+@main("Staff Membership", containerPadding=false) {
+
+    <main class="page-container__inner">
+        <section class="page-section">
+            <div class="page-section__row">
+                <div class="page-section__primary"></div>
+                <div class="page-section__secondary">
+                    <h1 class="page-headline">Guardian Staff Membership</h1>
+                    <p class="page-intro">All permanent Guardian staff can sign up to the Partner tier of Guardian membership for free (equivalent to £15/month)</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="page-section">
+            <div class="page-section__row">
+                <div class="page-section__primary"><h2 class="page-section-headline">Join Guardian Staff Membership now</h2></div>
+                <div class="page-section__secondary">
+                    <p>To join Guardian Staff Membership you must have a Guardian Identity account set up using your work email address ending @@theguardian.com (@@guardian.co.uk will work too).</p>
+                    @signpost(
+                        Html("Set up a <strong>new</strong> Guardian Identity account"), "Create account",
+                        Html("Use an <strong>existing</strong> Guardian Identity account"), "Sign in")
+                </div>
+            </div>
+        </section>
+
+        <section class="page-section">
+            <div class="page-section__row">
+                <div class="page-section__primary"><h2 class="page-section-headline">Join Guardian Staff Membership now</h2></div>
+                <div class="page-section__secondary">
+
+                    @userWelcome(
+                        "exampleUserName",
+                        "https://static-secure.guim.co.uk/sys-images/discussion/avatars/2014/09/15/13762437/dd487341-0798-4dc3-9d5e-bf85964482bc/60x60.png")
+
+                    <p>Currently your account is set up with <strong>exampleUserName@@hotmail.com</strong>. To join Guardian Staff Membership you must have a Guardian Identity account set up using your work email address ending @@theguardian.com (@@guardian.co.uk will work too).</p>
+                    @signpost(
+                        Html("Change email address to <strong>example@guardian.com</strong> Guardian Identity account"), "Change email and join",
+                        Html("Set up a <strong>new</strong> Guardian Identity account"), "Create new account"
+                    )
+                </div>
+            </div>
+        </section>
+
+        <section class="page-section">
+            <div class="page-section__row">
+                <div class="page-section__primary"><h2 class="page-section-headline">Join Guardian Staff Membership now</h2></div>
+                <div class="page-section__secondary">
+                @userWelcome(
+                    "exampleUserName",
+                    "https://static-secure.guim.co.uk/sys-images/discussion/avatars/2014/09/15/13762437/dd487341-0798-4dc3-9d5e-bf85964482bc/60x60.png")
+                    <a class="action action--no-bottom-margin" href="">Join</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="page-section">
+            <div class="page-section__row">
+                <div class="page-section__primary"><h2 class="page-section-headline">Partner benefits</h2></div>
+                <div class="page-section__secondary">
+                @fragments.benefits.detail(Tier.Partner)
+                </div>
+            </div>
+        </section>
+
+        <section class="page-section">
+            <div class="page-section__row">
+                <div class="page-section__primary"><h2 class="page-section-headline">Questions</h2></div>
+                <div class="page-section__secondary">
+                    <div class="help-faqs">
+                        <h2 class="help-faqs__headline">What is Guardian Membership?</h2>
+                        <p>Guardian Membership is for you if you share our belief that the open exchange of information, ideas and opinions can change the world for the better. By signing up and paying your subscription (at Partner and Patron level), you are helping bring these words to life by supporting open and independent journalism. In return, you get access to events and experiences that are only available to members.</p>
+                    </div>
+
+                    <div class="help-faqs">
+                        <h2 class="help-faqs__headline">Why should I join?</h2>
+
+                        <p>Membership has a lot to offer, and by joining in this beta phase, you can help build and shape Guardian Membership into one of the world’s largest communities of free thinkers. Benefits include access to the Guardian live events programme. Events range from lectures by the world’s foremost thinkers to exclusive screenings of the latest independent films; from sessions with senior journalists at our offices in Kings Place to more intimate, bespoke events. Tickets are only available to Guardian members. If you want to support the Guardian and its journalism, and keep our website open to all, then joining Guardian Membership and paying your subscription is a great way to do it.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 }
