--- a/frontend/assets/stylesheets/_head.common.scss
+++ b/frontend/assets/stylesheets/_head.common.scss
@@ -37,6 +37,7 @@
 @import 'layout/headings';
 @import 'layout/side-margins';
 @import 'layout/homeslice';
+@import 'components/signpost';
 
 /* Content
    ========================================================================== */
