Small refactor to put the construction of the address onto the venue
...I think it belongs there - and this is generally how I'd like to treat
optionally present data fields - with for-comprehensions on Options,
rather than testing for string emptiness.

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -78,9 +78,9 @@
                 </div>
                 <div class="event-details__location">
                     <span class="event-details__location__venue-name">@event.venue.name</span>
-                    @if(event.eventAddressLine.nonEmpty) {
+                    @for(addressLine <- event.venue.addressLine) {
                         <span class="event-details__location__address">
-                            , @event.eventAddressLine
+                            , @addressLine
                         </span>
                     }
                 </div>
@@ -154,8 +154,8 @@
                             </div>
                             <div class="event-content__second">
                                 <span class="event-content__venue-name" itemprop="name">@event.venue.name</span>
-                                @if(event.eventAddressLine.nonEmpty) {
-                                    <span class="event-content__address" itemprop="address">@event.eventAddressLine</span>
+                                @for(addressLine <- event.venue.addressLine) {
+                                    <span class="event-content__address" itemprop="address">@addressLine</span>
                                 }
                             </div>
                         </div>
